card reponsive layout bug fixing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,9 @@
   border-color: white; 
   border-radius: 5pt;
   margin-bottom: 30px;
+  width: 40rem;
+  
+  
 }
 
 .nav-a{
